Reorg so collections can be iterated through

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,11 @@ sass:
   style:            :compressed
 
 collections:
-  patterns:
+  atoms:
+    output: true
+  molecules:
+    output: true
+  organisms:
     output: true
   templates:
     output: true
