--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ url:                 http://kdemi.github.io/patternlab-jekyll
 baseurl:             /patternlab-jekyll
 destination:         _site
 version:             0.1.0
+port:                8888
 
 # Assets
 #
