--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ url:                 http://karissademi.github.io/patternlab-jekyll
 baseurl:             /patternlab-jekyll
 destination:         _site
 version:             0.1.0
+port:                8888
 
 # Assets
 #
@@ -22,11 +23,11 @@ sass:
   style:            :compressed
 
 collections:
-  atoms:
+  00-atoms:
     output: true
-  molecules:
+  00-molecules:
     output: true
-  organisms:
+  00-organisms:
     output: true
-  templates:
+  00-templates:
     output: true
