--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ port:                8888
 # We specify the directory for Jekyll so we can use @imports.
 sass:
   sass_dir:          _scss
-  style:            :compressed
+  style:            compressed
 
 collections:
   00-atoms:
